# new-queue

./: .env  .env.example  .env~Stashed changes  .gitignore  Cargo.toml  README.md  build_all.sh  dangerous_queries.sql  init.sql  queue_history.sql  reset_database.sh  rust-toolchain.toml  testing.sql
devops/: README.md  https-nginx.conf  nginx.conf  reset-ufw-queue.sh
devops/scripts/: is_alive.sh  start_server.sh
devops/systemd/: queue.service  queue_montitoring.service
migrations/2020-03-09-213707_create_user/: down.sql  up.sql
migrations/2020-03-15-224422_create_queue/: down.sql  up.sql
migrations/2020-03-15-225117_create_admin/: up.sql
migrations/2020-03-22-134353_create_users/: up.sql
migrations/2020-03-22-134807_create_queues/: up.sql
migrations/2020-03-25-183105_create_queue_entries/: down.sql  up.sql
migrations/2020-04-04-112052_create_admin/: down.sql  up.sql
migrations/2020-04-06-130829_create_super_admin/: down.sql  up.sql
migrations/2020-04-14-203322_create_statistics/: down.sql  up.sql
migrations/2021-07-08-171616_create_banners/: down.sql  up.sql
mongo-migration/: README.md  database_migratation.py
old-migrations/2020-03-09-213707_create_user/: down.sql
old-migrations/2020-03-15-225117_create_admin/: down.sql
old-queue/: .gitignore  README.md  package.json
old-queue/Testing/: HowToRunTests.txt  confMultiUser.js  confQueue.js  specMultiUser.js  specMultiUser2.js  specQueue.js
old-queue/app/: index.js  utils.js
old-queue/app/model/: admin.js  booking.js  chatMessage.js  completion.js  globalMOTD.js  message.js  queue.js  queueSystem.js  statistic.js  user.js
old-queue/app/routes/: admin.js  assistant.js  httpRoutes.js  socket.js
old-queue/public/: about.html  aboutData.json  app.js  controllers.js  help.html  index.html  list.html  login.html  main.less  queuePanel.html  services.js
old-queue/public/admin/: admin.js  adminOptions.html  administration.html  teacherOptions.html
old-queue/public/modals/: confirmModal.html  getModal.html  listModal.html  scheduleModal.html  setModal.html  submitModal.html  twoChoice.html
old-queue/public/queue/: bookedUsers.html  directive.js  queue.html  queue.js  standardUsers.html
old-queue/public/statistics/: statistics.html  statistics.js
old-src/: main.rs  schema.rs
old-src/chat/: ws_rs.rs
old-src/route/: mod.rs
public/: links.md  package-lock.json  package.json
public/public/: index.html  manifest.json
public/public/css/: local.css
public/src/: App.tsx  configuration.ts  index.tsx  react-app-env.d.ts  serviceWorker.ts  store.ts  tslint.json
public/src/actions/: addInputActions.ts  administratorActions.ts  assistantActions.ts  bannerActions.ts  debugActions.ts  (+12 more)
src/: auth.rs  config.rs  errors.rs  lib.rs  main.rs  models.rs  schema.rs  sql_types.rs  util.rs
src/chat/: ws_rs.rs
src/db/: admin.rs  admins.rs  banners.rs  mod.rs  queue.rs  queue_entries.rs  queues.rs  super_admins.rs  user_events.rs  users.rs
src/models/: admin.rs  banner.rs  mod.rs  queue.rs  queue_entry.rs  super_admin.rs  user.rs  user_event.rs
src/route/: get.rs  post.rs
src/routes/: admins.rs  banners.rs  login.rs  mod.rs  queue_entries.rs  queues.rs  static_files.rs  super_admins.rs  user_events.rs  users.rs
src/wsroutes/: mod.rs  routes.rs  ws_rs.rs
tests/: first.rs
tests/common/: mod.rs
(+132 files in other folders)
