[package]
name = "queuesystem"
version = "0.1.0"
edition = "2018"
license = "Unlicense OR MIT"

description = """
Replacement for the computer lab queue system at KTH.
"""
readme = "README.md"

[dependencies]
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4.5", features = ["postgres", "chrono", "r2d2"] }
diesel-derive-enum = { version = "0.4", features = ["postgres"] }
dotenv = "0.9.0"
jsonwebtoken = "6.0.1"
ldap3 = "0.6"
rand = "0.7.2"
rocket = { version = "0.4.5", default-features = false }
rocket_cors = { version = "0.5.2", default-features = false }
rust-crypto = "0.2.36"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = "0.10.0"
validator_derive = "0.10.0"
ws = "0.9.1"
clokwerk = "0.3.0"
reqwest = { version = "0.10.6", features = ["blocking"] }
unicode-truncate = "0.1.1"
dns-lookup = "1.0.3"
rocket-client-addr = "0.4.4"


[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json", "serve", "diesel_postgres_pool"]

[dev-dependencies]
once_cell = "1.2.0"
mockiato = "0.9.5"
mockito = "0.25.1"
