[package]
name = "queuesystem"
version = "0.1.0"
edition = "2018"
license = "Unlicense OR MIT"

description = """
Replacement for the computer lab queue system at KTH.
"""
readme = "README.md"

[dependencies]
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4.6", features = ["postgres", "chrono", "r2d2"] }
diesel-derive-enum = { version = "0.4", features = ["postgres"] }
dotenv = "0.9.0"
jsonwebtoken = "7.2.0"
ldap3 = "0.6"
rand = "0.8.3"
rocket = { version = "0.4.7", default-features = false }
rocket_cors = { version = "0.5.2", default-features = false }
rust-crypto = "0.2.36"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = "0.13.0"
validator_derive = "0.13.0"
ws = "0.9.1"
clokwerk = "0.3.5"
reqwest = { version = "0.11.3", features = ["blocking"] }
unicode-truncate = "0.2.0"
dns-lookup = "1.0.6"
rocket-client-addr = "0.4.6"
openidconnect = "2.0.1"


[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["json", "serve", "diesel_postgres_pool"]

[dev-dependencies]
once_cell = "1.2.0"
mockiato = "0.9.5"
mockito = "0.25.1"
